--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container h-100">
         <div class="row">
             <div class="d-flex justify-content-center align-middle">
-                <div>
+                <h4>
                     <span id="n_error"></span>
                     <i class="bi bi-x-circle-fill" style="color: red"></i>
                     <span id="n_ok"></span>
@@ -24,17 +24,19 @@
                     -
                     <span id="clock_view"></span>
                     <i id="reset_btn" class="bi bi-eraser-fill"></i>
-                </div>
+                </h4>
 
             </div>
         </div>
         <br />
-        <h1 id="word" class="arial row justify-content-center align-items-center"></h1>
+        <h1 id="word" class="display-1 arial row justify-content-center align-items-center"></h1>
         <br />
         <br />
         <div class="row">
-            <h1 id="error_btn" class="bi bi-x-circle-fill col-6 d-flex justify-content-center" style="color: red"></h1>
-            <h1 id="ok_btn" class="bi bi-check-circle-fill col-6 d-flex justify-content-center" style="color: green">
+            <h1 id="error_btn" class="display-1 bi bi-x-circle-fill col-6 d-flex justify-content-center"
+                style="color: red"></h1>
+            <h1 id="ok_btn" class="display-1 bi bi-check-circle-fill col-6 d-flex justify-content-center"
+                style="color: green">
             </h1>
         </div>
 
